Fix spillover in Train overview

--- a/frontend/src/views/sub/Train.css
+++ b/frontend/src/views/sub/Train.css
@@ -5,16 +5,45 @@
   height: 100%;
   width: 100%;
 
-  padding: 10px;
+  padding: 15px;
 }
 .Train p {
-  font-size: 14px;
+  font-size: 13px;
   opacity: 0.9;
   margin: 3px;
 }
 
+/* Scheduled workouts */
+.Train-scheduled {
+  max-height: calc(100% - 53px);
+  padding-bottom: 7px;
+  overflow:hidden;
+  position:relative;
+  top: 12px;
+}
+.Train-scheduled-info {
+  position: absolute;
+  padding: 0 15px;
+  width: 95%;
+  display: flex;
+  justify-content: space-between;
+}
+.Train-scheduled-workouts {
+  height: 100%;
+  display: flex;
+  margin-top: 7px;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 10px;
+  overflow-y: auto;
+  min-width: 0;
+}
+
+
 .Train-actions {
   margin: 10px 0;
+  flex-shrink: 0;
+  flex-grow: 0;
 }
 .Train-actions > * {
   margin-bottom: 15px;
